# BrewPiLess

./: README.md  platformio.ini
htmljs/: gruntfile.coffee  output.sh  package-lock.json  package.json
htmljs/cheader/: english_config_htm.h  english_control_htm.h  english_gdc_e32_htm.h  english_gdc_htm.h  english_index_htm.h  english_log_htm.h  english_pressure_htm.h  english_setup_htm.h
htmljs/src/: index.tmpl.html  logging.tmpl.html
htmljs/src/js/: script-control.js
htmljs/src/locales/: english.json
htmljs/src/styles/layout/: _typo.scss
htmljs/src/styles/ui-elements/: _radio.scss
lib/ESPAsyncWebServer-master/: CMakeLists.txt
lib/ESPAsyncWebServer-master/src/: AsyncEventSource.cpp  AsyncWebSocket.cpp
src/: BPLSettings.cpp  BPLSettings.h  Menu.cpp  MqttRemoteControl.cpp  MqttRemoteControl.h
